# StarNet

./: .gitignore  README.md
app/: dataloader.py  frameseg_tester.py  frameseg_trainer.py  sceneseg_tester.py  sceneseg_trainer.py  trainer.py  visualizer.py
data/: CMakeLists.txt  removedata.sh  run_dataset_visualizer.cpp  run_label_viewer.cpp
data/savings/: 5test.pcd  8test.pcd  test.pcd
model/: StarNet.py
